--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -105,18 +105,23 @@
                     <td><strong>{{ day }}</strong></td>
                     {% for time in time_slots %}
                     <td>
+                        {% set displayed_rows = [] %}
                         {% for row in timetable_data %}
                             {% set class_day = row.classDay.upper() %}
                             {% set class_time = row.classTime %}
                             {% set start_time = class_time.split('-')[0] %}
                             {% set end_time = class_time.split('-')[1] %}
                             {% if class_day == day and time >= start_time and time < end_time %}
-                                <div style="border: 1px solid #999; margin: 2px; padding: 2px;">
-                                    <strong>{{ row.lecturerName }}</strong><br>
-                                    <strong>[{{ row.classType }}]</strong><br>
-                                    {{ row.courseName }}<br>
-                                    Room: {{ row.classRoom }}
-                                </div>
+                                {% set key = row.lecturerName ~ row.classType ~ row.classDay ~ row.classTime ~ row.classRoom ~ row.courseName %}
+                                {% if key not in displayed_rows %}
+                                    {% do displayed_rows.append(key) %}
+                                    <div style="border: 1px solid #999; margin: 2px; padding: 2px;">
+                                        <strong>{{ row.lecturerName }}</strong><br>
+                                        <strong>[{{ row.classType }}]</strong><br>
+                                        {{ row.courseName }}<br>
+                                        Room: {{ row.classRoom }}
+                                    </div>
+                                {% endif %}
                             {% endif %}
                         {% endfor %}
                     </td>
