--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -72,7 +72,7 @@
         <!-- Filter Section -->
         <div class="form-right">
             <form method="get" style="display:flex; align-items:center; gap:8px;">
-                <label for="lecturer">Select Lecturer:</label>
+                <label for="lecturer">Select_Lecturer:</label>
                 <select name="lecturer" id="lecturer" onchange="this.form.submit()">
                     <option value="">All Lecturers</option>
                     {% for lecturer in lecturers %}
