--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -111,48 +111,28 @@
                 {% for day in week_days %}
                 <tr>
                     <td><strong>{{ day }}</strong></td>
-                    
-                    {% for time_slot in time_slots %}
-                        {% set cell_content = none %}
-                        {% set cell_colspan = 1 %}
-                        
-                        {% for item in timetable_data %}
-                            {% if item.classDay == day %}
-                                {% set item_start_time = item.classTime.split('-')[0] %}
-                                {% set item_end_time = item.classTime.split('-')[1] %}
-                                
-                                {% if time_slot == item_start_time %}
-                                    {% if not selected_lecturer or selected_lecturer == item.lecturerName %}
-                                        {% set cell_content = item %}
-                                        {% set cell_colspan = 1 %}
-                                        
-                                        {# Calculate colspan based on duration #}
-                                        {% set start_index = time_slots.index(item_start_time) %}
-                                        {% set end_index = time_slots.index(item_end_time) %}
-                                        {% if end_index > start_index %}
-                                            {% set cell_colspan = end_index - start_index %}
-                                        {% endif %}
-                                    {% endif %}
+                    {% for time in time_slots %}
+                    <td>
+                        {% set displayed_rows = {} %}
+                        {% for row in timetable_data %}
+                            {% set class_day = row.classDay %}
+                            {% set class_time = row.classTime %}
+                            {% set start_time = class_time.split('-')[0] %}
+                            {% set end_time = class_time.split('-')[1] %}
+                            {% if class_day == day and time >= start_time and time < end_time %}
+                                {% set key = row.lecturerName ~ row.classType ~ row.classDay ~ row.classTime ~ row.classRoom ~ row.courseName %}
+                                {% if not displayed_rows[key] %}
+                                    {% set _ = displayed_rows.update({key: true}) %}
+                                    <div style="border: 1px solid #999; margin: 2px; padding: 2px;">
+                                        <strong>{{ row.lecturerName }}</strong><br>
+                                        <strong>[{{ row.classType }}]</strong><br>
+                                        {{ row.courseName }}<br>
+                                        Room: {{ row.classRoom }}
+                                    </div>
                                 {% endif %}
                             {% endif %}
                         {% endfor %}
-                        
-                        {% if cell_content %}
-                            <td colspan="{{ cell_colspan }}">
-                                <div style="border: 1px solid #999; margin: 2px; padding: 2px; background-color: #f8f8f8;">
-                                    <strong>{{ cell_content.lecturerName }}</strong><br>
-                                    <strong>[{{ cell_content.classType }}]</strong><br>
-                                    {{ cell_content.courseName }}<br>
-                                    Room: {{ cell_content.classRoom }}
-                                </div>
-                            </td>
-                            {# Skip the next cells based on colspan #}
-                            {% for i in range(1, cell_colspan) %}
-                                </tr><tr><td style="display: none;"></td>
-                            {% endfor %}
-                        {% else %}
-                            <td></td>
-                        {% endif %}
+                    </td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
