--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -113,20 +113,23 @@
                     <td><strong>{{ day }}</strong></td>
                     {% for time in time_slots %}
                     <td>
+                        {% set displayed_rows = {} %}
                         {% for row in timetable_data %}
                             {% set class_day = row.classDay %}
                             {% set class_time = row.classTime %}
                             {% set start_time = class_time.split('-')[0] %}
                             {% set end_time = class_time.split('-')[1] %}
-                            
-                            {% if class_day == day and time == start_time %}
-                                <div style="border: 1px solid #999; margin: 2px; padding: 2px;"
-                                    colspan="{{ (end_time[:2] | int) - (start_time[:2] | int) }}">
-                                    <strong>{{ row.lecturerName }}</strong><br>
-                                    <strong>[{{ row.classType }}]</strong><br>
-                                    {{ row.courseName }}<br>
-                                    Room: {{ row.classRoom }}
-                                </div>
+                            {% if class_day == day and time >= start_time and time < end_time %}
+                                {% set key = row.lecturerName ~ row.classType ~ row.classDay ~ row.classTime ~ row.classRoom ~ row.courseName %}
+                                {% if not displayed_rows[key] %}
+                                    {% set _ = displayed_rows.update({key: true}) %}
+                                    <div style="border: 1px solid #999; margin: 2px; padding: 2px;">
+                                        <strong>{{ row.lecturerName }}</strong><br>
+                                        <strong>[{{ row.classType }}]</strong><br>
+                                        {{ row.courseName }}<br>
+                                        Room: {{ row.classRoom }}
+                                    </div>
+                                {% endif %}
                             {% endif %}
                         {% endfor %}
                     </td>
